--- a/templates/firstQuestion.html
+++ b/templates/firstQuestion.html
@@ -1,6 +1,13 @@
 <html>
+<head>
 	<title>Superhero</title>
+    <style>
+        
+    </style>
+</head>
+
 	<body>
+    
 	<h1>Which Superhero are you?</h1>
 
 <img src = "allherospicture.jpg" width="500">
@@ -45,6 +52,84 @@
 </li>
 <input type='submit' value='Submit answer' />
 <input type='button' value='Next Question'/>
-</p>
+
+<br><br><b><!-- Beginning of new question-->
+
+
+<img src = "allherospicture.jpg" width="500">
+<li>
+
+    <h3>What is your biggest strength?</h3>
+    
+    <div>
+        <input type="radio" name="q2" id="q2A" value="A" />
+        <label for="q2A">A) You're trustworthy </label>
+    </div>
+    
+    <div>
+        <input type="radio" name="q2" id="q2B" value="B" />
+        <label for="q2B">B) You're passionate </label>
+    </div>
+    
+    <div>
+        <input type="radio" name="q2" id="q2C" value="C" />
+        <label for="q2C">C) You're protective</label>
+    </div>
+    
+    <div>
+        <input type="radio" name="q2" id="q2D" value="D" />
+        <label for="q2D">D) You have good gut feelings</label>
+    </div>
+
+    <div>
+        <input type="radio" name="q2" id="q2E" value="E" />
+        <label for="q2E">E) You're intelligent</label>
+    </div>
+
+    <div>
+        <input type="radio" name="q2" id="q2F" value="F" />
+        <label for="q2F">F) You use anger to your advantage</label>
+    </div>
+
+    <div>
+        <input type="radio" name="q2" id="q2G" value="G" />
+        <label for="q2G">G) You have a good heart</label>
+    </div>
+</li>
+<input type='submit' value='Submit answer' />
+<input type='button' value='Next Question'/>
+
+<br><br><b><!-- Beginning of question 6-->
+
+
+<img src = "allherospicture.jpg" width="500">
+<li>
+
+    <h3>What is your biggest strength?</h3>
+    
+    <div>
+        <input type="radio" name="q6" id="q6A" value="A" />
+        <label for="q6A">A) You're trustworthy </label>
+    </div>
+    
+    <div>
+        <input type="radio" name="q2" id="q2B" value="B" />
+        <label for="q2B">B) You're passionate </label>
+    </div>
+    
+    <div>
+        <input type="radio" name="q2" id="q2C" value="C" />
+        <label for="q2C">C) You're protective</label>
+    </div>
+    
+    <div>
+        <input type="radio" name="q2" id="q2D" value="D" />
+        <label for="q2D">D) You have good gut feelings</label>
+    </div>
+
+</li>
+<input type='submit' value='Submit answer' />
+
+<br><br><b><!-- Beginning of new question--> 
 </body>
 </html>
