--- a/templates/secondQuestion.html
+++ b/templates/secondQuestion.html
@@ -37,7 +37,7 @@
 
     <div>
         <input type="radio" name="question-1-answers" id="question-1-answers-E" value="E" />
-        <label for="question-1-answers-E">E) You're intelligent/label>
+        <label for="question-1-answers-E">E) You're intelligent</label>
     </div>
 
     <div>
