--- a/templates/firstQuestion.html
+++ b/templates/firstQuestion.html
@@ -1,135 +1,98 @@
 <html>
 <head>
-	<title>Superhero</title>
+    <title>Superhero</title>
     <style>
         
     </style>
 </head>
 
-	<body>
+    <body>
     
-	<h1>Which Superhero are you?</h1>
+    <h1>Which Superhero are you?</h1>
 
-<img src = "allherospicture.jpg" width="500">
-<li>
+<img src = "/static/allherospicture.jpg" width="500">
+<li class="question-list"><!--
 
     <h3>What is you biggest weakness?</h3>
     
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-A" value="A" />
-        <label for="question-1-answers-A">A) You try to do too much </label>
+        <input type="radio" name="q1" id="q1A" value="A" />
+        <label for="q1A">A) You try to do too much </label>
     </div>
     
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-B" value="B" />
-        <label for="question-1-answers-B">B) Psychological trauma from the past</label>
+        <input type="radio" name="q1" id="q1B" value="B" />
+        <label for="q1B">B) Psychological trauma from the past</label>
     </div>
     
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-C" value="C" />
-        <label for="question-1-answers-C">C) You rely on others too much</label>
+        <input type="radio" name="q1" id="q1C" value="C" />
+        <label for="q1C">C) You rely on others too much</label>
     </div>
     
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-D" value="D" />
-        <label for="question-1-answers-D">D) You love attention</label>
+        <input type="radio" name="q1" id="q1D" value="D" />
+        <label for="q1D">D) You love attention</label>
     </div>
 
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-E" value="E" />
-        <label for="question-1-answers-E">E) Your ego</label>
+        <input type="radio" name="q1" id="q1E" value="E" />
+        <label for="q1E">E) Your ego</label>
     </div>
 
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-F" value="F" />
-        <label for="question-1-answers-F">F) You're destructive</label>
+        <input type="radio" name="q1" id="q1F" value="F" />
+        <label for="q1F">F) You're destructive</label>
     </div>
 
     <div>
-        <input type="radio" name="question-1-answers" id="question-1-answers-G" value="G" />
-        <label for="question-1-answers-G">G) You are insensitive to others.</label>
-    </div>
+        <input type="radio" name="q1" id="q1G" value="G" />
+        <label for="q1G">G) You are insensitive to others.</label>
+    </div>-->
 </li>
 <input type='submit' value='Submit answer' />
 <input type='button' value='Next Question'/>
 
-<br><br><b><!-- Beginning of new question-->
 
-
-<img src = "allherospicture.jpg" width="500">
-<li>
-
-    <h3>What is your biggest strength?</h3>
-    
-    <div>
-        <input type="radio" name="q2" id="q2A" value="A" />
-        <label for="q2A">A) You're trustworthy </label>
-    </div>
-    
-    <div>
-        <input type="radio" name="q2" id="q2B" value="B" />
-        <label for="q2B">B) You're passionate </label>
-    </div>
-    
-    <div>
-        <input type="radio" name="q2" id="q2C" value="C" />
-        <label for="q2C">C) You're protective</label>
-    </div>
-    
-    <div>
-        <input type="radio" name="q2" id="q2D" value="D" />
-        <label for="q2D">D) You have good gut feelings</label>
-    </div>
-
-    <div>
-        <input type="radio" name="q2" id="q2E" value="E" />
-        <label for="q2E">E) You're intelligent</label>
-    </div>
-
-    <div>
-        <input type="radio" name="q2" id="q2F" value="F" />
-        <label for="q2F">F) You use anger to your advantage</label>
-    </div>
-
-    <div>
-        <input type="radio" name="q2" id="q2G" value="G" />
-        <label for="q2G">G) You have a good heart</label>
-    </div>
-</li>
-<input type='submit' value='Submit answer' />
-<input type='button' value='Next Question'/>
-
-<br><br><b><!-- Beginning of question 6-->
-
-
-<img src = "allherospicture.jpg" width="500">
-<li>
-
-    <h3>What is your biggest strength?</h3>
-    
-    <div>
-        <input type="radio" name="q6" id="q6A" value="A" />
-        <label for="q6A">A) You're trustworthy </label>
-    </div>
-    
-    <div>
-        <input type="radio" name="q2" id="q2B" value="B" />
-        <label for="q2B">B) You're passionate </label>
-    </div>
-    
-    <div>
-        <input type="radio" name="q2" id="q2C" value="C" />
-        <label for="q2C">C) You're protective</label>
-    </div>
-    
-    <div>
-        <input type="radio" name="q2" id="q2D" value="D" />
-        <label for="q2D">D) You have good gut feelings</label>
-    </div>
-
-</li>
 <input type='submit' value='Submit answer' />
 
 <br><br><b><!-- Beginning of new question--> 
+
 </body>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" ></script>
+<script type="text/javascript">
+    var questions;
+    var answers = [];
+
+    var route = "data";
+    var callback = function(returned_json) {
+    questions = returned_json["questions"];
+    console.log(questions);
+    updateUI();
+    };
+
+    $.getJSON(route, callback);
+
+    function updateUI(){
+        if (questions == null) {
+            return;
+        }
+        if (questions.length == answers.length) {
+            console.log('Good job.')
+        }
+        else {
+            var index = answers.length
+            var questionTitle = questions[index]['title']
+            var questionResponses= questions[index]['responses']
+            $(".question-list").append("<h3>"+questionTitle+"</h3>");
+            $(".question-list").append("<input type=\"radio\" name=\"q\" value=\"A\");
+
+        }
+        
+    }
+
+    function nextQuestion() {
+        
+    }
+</script>
 </html>
