--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,16 @@
 <html>
 <head>
-	<title>Main Page</title>
-	<style>
-		
-	</style>
+    <title>Main Page</title>
+    <style>
+        
+    </style>
 </head>
-	<body>
-	<h1>Which Superhero are you?</h1>
+    <body>
+    <h1>Personality Quizzes</h1>
 <ul>
   <li><a href="first">Take the Superhero personality test.</a></li>
+  <li>Take the Ball personality test</li>
+  <li>Take the Good personality test</li>
   
 </ul>
 </body>
